##
## SimSoC Initial software, Copyright © INRIA 2007, 2008, 2009, 2010
## LGPL license version 3
##

noinst_PROGRAMS = armgen
armgen_SOURCES = armgen_b.cpp armgen_clz.cpp armgen.cpp armgen_dpi.cpp \
                 armgen_ldmstm.cpp armgen_loadstore.cpp armgen_mli.cpp \
                 armgen_mrsmsr.cpp armgen_swi.cpp armgen_swp.cpp \
                 armgen_b.hpp armgen_clz.hpp armgen.hpp armgen_dpi.hpp \
                 armgen_ldmstm.hpp armgen_loadstore.hpp armgen_mli.hpp \
                 armgen_mrsmsr.hpp armgen_swi.hpp armgen_swp.hpp \
		 main.cpp
AM_CXXFLAGS += -O0
